--- a/INDEX.html
+++ b/INDEX.html
@@ -116,6 +116,11 @@
                 delay: anime.stagger(50, {start:11000})
             })
         });
+         const cursor = document.querySelector('.cursor');
+        document.addEventListener('mousemove', (e) => {
+            cursor.style.left = e.pageX + 'px';
+            cursor.style.top = e.pageY + 'px';
+        })
 
     </script>
 </body>
