--- a/INDEX.html
+++ b/INDEX.html
@@ -41,6 +41,7 @@
                     <h6 class="student">Student</h6>
                     <h1 class="name">Abhay</h1>
                     <p class="small-intro">Hello Guyz, My Name is Abhay Maurya - just 18 and i'm BSc IT student at NKT College.</p>
+                    <div class="cursor"></div>
                 </div>
             </div>
         </div>
